Ajuste na API
